fix: Aligned the text over header image in proper position

--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,8 @@ ul.homepage-events.thumb-right span.lw_item_thumb {
     margin-right: auto;
     padding: 10% 7% 55px;
     text-align: left;
+    width: 100%;
+    margin-left: auto;
 }
 
 .single-news-hero h1 {
